Fixed logic bug of radio buttons (Visa alla varor    Visa endast köpta varor    Visa endast oköpta varor) & set display to none for display view to avoid flickers,

--- a/main.css
+++ b/main.css
@@ -26,6 +26,10 @@ body{
 	margin-top: 10px;
 }
 
+.detail-view{
+	display: none;
+}
+
 .app-btn{
 	background-color: #007aff;
     color: #FFF;
